Repair opening URLs in konqueror

We don't want to launch firefox when doing "konqueror www.kde.org" :)

This is similar to the logic in commit 2abb3fa908082d76d4381193a9498afdfc2bed15

The fix for konqueror also depends on
https://invent.kde.org/network/konqueror/commit/6a46c0c8701fbde143a33e4be61f198e98f53c10

BUG: 442636